feat(login): add login page
add login page, undone with user check

--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "element-ui": "^2.1.0",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "babel-plugin-component": "^1.1.0",
     "cz-conventional-changelog": "^2.1.0",
     "eslint": "^4.15.0",
     "eslint-friendly-formatter": "^3.0.0",
