--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "element-ui": "^2.1.0",
+    "mongoose": "^5.1.1",
     "nuxt": "^1.0.0"
   },
   "devDependencies": {
