--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "precommit": "npm run lint"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "element-ui": "^2.1.0",
+    "moment": "^2.22.2",
     "mongoose": "^5.1.1",
     "nuxt": "^1.0.0"
   },
